// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxSelection should render 1`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
      ],
    }
  }
>
  <div
    className="bx--list-box__selection"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
    title="translation"
  >
    <Icon
      description="translation"
      fillRule="evenodd"
      focusable="false"
      name="close"
      role="img"
    >
      <svg
        alt="translation"
        aria-label="translation"
        fillRule="evenodd"
        focusable="false"
        height="10"
        name="close"
        role="img"
        viewBox="0 0 10 10"
        width="10"
      >
        <title>
          translation
        </title>
        <path
          d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
          key="key0"
        />
      </svg>
    </Icon>
  </div>
</ListBoxSelection>
`;

exports[`ListBoxSelection should render 2`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  selectionCount={3}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
      ],
    }
  }
>
  <div
    className="bx--list-box__selection bx--list-box__selection--multi"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
    title="translation"
  >
    3
    <Icon
      description="translation"
      fillRule="evenodd"
      focusable="false"
      name="close"
      role="img"
    >
      <svg
        alt="translation"
        aria-label="translation"
        fillRule="evenodd"
        focusable="false"
        height="10"
        name="close"
        role="img"
        viewBox="0 0 10 10"
        width="10"
      >
        <title>
          translation
        </title>
        <path
          d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
          key="key0"
        />
      </svg>
    </Icon>
  </div>
</ListBoxSelection>
`;
